--- a/src/views/index.edge
+++ b/src/views/index.edge
@@ -22,7 +22,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           @each(post in posts)
             <div class="post-preview">
-            <a href="post/{{ post._id }}">
+            <a href="post/{{ post.slug }}">
               <h2 class="post-title">
                 {{ post.title }}
               </h2>
